kubernetes/apps/kyverno/kyverno/policies/add-ipallowlist-middleware.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ipallowlist-middleware
  annotations:
    policies.kyverno.io/title: Add IPAllowlist Middleware
    policies.kyverno.io/category: Traefik
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy adds local only middleware to all ingresses.
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: add-ipallowlist-middleware
      match:
        any:
          - resources:
              kinds:
                - Ingress
      exclude:
        any:
          - resources:
              annotations:
                traefik.ingress.kubernetes.io/router.middlewares: "*networking-localonly@kubernetescrd*"
          - resources:
              annotations:
                public.ingress.home.arpa: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.middlewares): "networking-localonly@kubernetescrd,"
